# oc_mortic

./: .gitignore  AGENTS.md  MORTIC_PLUGIN_HANDOFF.md  README.md  pyproject.toml  requirements.txt
configs/: fusion_mercury_2.json  fusion_mercury_2.yaml  groq_mercury_2.json  inception_mercury_2.json
docs/: MORTIC_CURRENT_CODE_INVENTORY.md  MORTIC_LAUNCH_READINESS_REVIEW.md  MORTIC_MANAGED_VOICE_ARCHITECTURE.md  MORTIC_MERCURY_PRODUCT_ACCEPTANCE.md  MORTIC_OPENCODE_SIDEPOD_PRD.md  MORTIC_OWNERSHIP_BOUNDARIES.md  MORTIC_PROJECT_EXECUTION_PLAN.md  MORTIC_PROTOCOL_V0.md  MORTIC_SERVER_HELPER_HYGIENE_PLAN.md  MORTIC_STRUCTURED_STREAMING_INVESTIGATION.md  MORTIC_TERMINAL_CAPABILITY_SMOKE.md  MORTIPHI_YC_APPLICATION_QUESTION_BANK.docx  MORTIPHI_YC_APPLICATION_QUESTION_BANK_PREFILLED.docx
opencode_mercury_sidepod/: README.md  package-lock.json  package.json
opencode_voice/: __init__.py  __main__.py  agent_backend.py  audio_processing.py  callbacks.py  cartesia.py  config.py  deepgram.py  deepgram_stt_provider.py  device_audio.py  doctor.py  echo_probe.py  existing_session_canary.py  flux_transport.py  interruption.py  logging.py  managed_opencode.py  managed_watchdog.py  opencode_client.py  playback.py  protocol.py  protocol_schema.json  response_benchmarks.py  response_compaction.py  response_compaction_runner.py  response_comparison.py  response_contract.py  response_eval.py  response_eval_agent.md  response_eval_corpus.py  response_eval_judge.md  server.py  speech_filter.py  state.py  structured_turn.py  stt_provider.py  telemetry.py  tts_chunker.py  tts_providers.py  voice_agent.md
openrouter_bench/: __init__.py  config.py  draco.py  openrouter.py  run.py
protocol/: generate.ts  mortic.sidepod.v0.schema.json  package.json  schema.ts
scripts/: __init__.py  (+1 more)
(+50 files in other folders)
