[project]
name = "openrouter-fusion-bench"
version = "0.1.0"
description = "Local OpenRouter Fusion/Mercury 2 benchmark harness for DRACO."
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=12.0",
]

[project.scripts]
openrouter-bench = "openrouter_bench.run:main"
opencode-voice = "opencode_voice.__main__:main"

[tool.setuptools.package-data]
opencode_voice = ["static/*"]
