[project]
name = "mortic-opencode-voice"
version = "0.1.0"
description = "Mortic OpenCode voice bridge and native sidepod prototype."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=12.0",
]

[project.scripts]
opencode-voice = "opencode_voice.__main__:main"

[tool.setuptools.package-data]
opencode_voice = ["static/*"]
