[project]
name = "mortic-helper"
version = "0.1.0"
description = "Mortic local helper for OpenCode voice sessions."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jsonschema>=4.21",
  "sounddevice>=0.5.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=12.0",
]

[project.scripts]
mortic-helper = "opencode_voice.__main__:main"
opencode-voice = "opencode_voice.__main__:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["opencode_voice*"]

[tool.setuptools.package-data]
opencode_voice = ["protocol_schema.json", "voice_agent.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
